Removido as consultar de usuário por tipo e e-mail, e adicionado retorno do cadastrar